--- a/pike/index.html
+++ b/pike/index.html
@@ -6,6 +6,8 @@
     <title>Clem dots thingy</title>
 </head>
 
-<body><script src="bundle.js"></script></body>
+<body>
+	<audio id="audio" src="03_Nero.mp3"></audio>
+<script src="bundle.js"></script></body>
 
 </html>
