--- a/pike/index.html
+++ b/pike/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<audio id="audio" autoplay="false" src="src/03_Nero.mp3"></audio>
+	<audio id="audio" autoplay="false" src="03_Nero.mp3"></audio>
 
 <div id="wrapper" class="wrapper">
     <button id="startBtn" class="button">Start</button>
