--- a/pike/index.html
+++ b/pike/index.html
@@ -10,7 +10,7 @@
 	<audio id="audio" autoplay="false" src="03_Nero.mp3"></audio>
 
 <div id="wrapper" class="wrapper">
-    <button id="startBtn" class="button">GO</button>
+    <button id="startBtn" class="button">PLAY</button>
 </div>
 <script src="bundle.js"></script></body>
 
