--- a/pike/index.html
+++ b/pike/index.html
@@ -4,6 +4,41 @@
 <head>
     <meta charset="utf-8">
     <title>NERO</title>
+    <style>
+    	html,
+		body 
+		{
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #000000;
+		}
+
+		button:focus, textarea:focus, select:focus
+		{
+		    outline: none;
+		}
+
+		.wrapper 
+		{
+		    text-align: center;
+		}
+
+		.button 
+		{
+		    position: absolute;
+		    margin: -32px -32px;
+		    top: 50%;
+		    font-size: 32px;
+		    border: none;
+		    color: black;
+		  	background-color: white;
+		  	padding: 14px 4px;
+		  	font-size: 16px;
+		    border-radius: 64px;
+		}
+		
+</style>
 </head>
 
 <body>
