--- a/pike/index.html
+++ b/pike/index.html
@@ -14,7 +14,7 @@
 			margin: 0;
 			padding: 0;
 			overflow: hidden;
-			background-color: #FFFFFF;
+			background-color: #000000;
 		}
 
 		button:focus, textarea:focus, select:focus
