--- a/pms/index.html
+++ b/pms/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="theme-color" content="#2196f3"><title>PHM Remote Test | AXi</title><script>window.WebSocket = window.WebSocket || window.MozWebSocket;
 
-var connection = new WebSocket('ws://192.168.0.141:8001');
+var connection = new WebSocket('ws://protected-dawn-80719.herokuapp.com');
 
 connection.onopen = function () 
 {
