--- a/energizer/index.html
+++ b/energizer/index.html
@@ -22,11 +22,11 @@
 			<td>Tempo</td>
 		</tr>
 		<tr>
-			<td><webaudio-switch id="play-switch" src="../knobs/switch_toggle.png" width="64" height="64"></webaudio-switch>
-			<td><webaudio-knob id="volume-knob" src="../knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
-			<td><webaudio-knob id="delay-knob" src="../knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
-			<td><webaudio-knob id="reverb-knob" src="../knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
-			<td><webaudio-knob id="tempo-knob" src="../knobs/LittlePhatty.png" min="10" max="100" value="100"></webaudio-knob></td>
+			<td><webaudio-switch id="play-switch" src="knobs/switch_toggle.png" width="64" height="64"></webaudio-switch>
+			<td><webaudio-knob id="volume-knob" src="knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
+			<td><webaudio-knob id="delay-knob" src="knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
+			<td><webaudio-knob id="reverb-knob" src="knobs/LittlePhatty.png" min="0" max="100" value="100"></webaudio-knob></td>
+			<td><webaudio-knob id="tempo-knob" src="knobs/LittlePhatty.png" min="10" max="100" value="100"></webaudio-knob></td>
 			
 		</tr>
 		<tr>
